Set index of whl_df to 'Date'. Set index of sp_df to Date. Sort sp_df by index. Rerun Daily Returns functions.

--- a/whale_analys.ipynb
+++ b/whale_analys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "[1060 rows x 5 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "[1059 rows x 5 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set index of whl_df to Date\n",
+    "whl_df.set_index(['Date'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +383,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +408,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the index of sp_df to Date and drop 'Date' column\n",
+    "sp_df.set_index(sp_df['Date'],inplace=True)\n",
+    "sp_df.drop(columns=['Date'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort sp_df by 'Date' column in ascending order\n",
+    "sp_df.sort_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -422,89 +453,82 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
        "      <th>S&amp;P 500</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019-04-23</td>\n",
+       "      <th>2012-10-01</th>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019-04-22</td>\n",
-       "      <td>-0.008764</td>\n",
+       "      <th>2012-10-02</th>\n",
+       "      <td>0.000872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-04-18</td>\n",
-       "      <td>-0.001011</td>\n",
+       "      <th>2012-10-03</th>\n",
+       "      <td>0.003624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-04-17</td>\n",
-       "      <td>-0.001577</td>\n",
+       "      <th>2012-10-04</th>\n",
+       "      <td>0.007174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-04-16</td>\n",
-       "      <td>0.002279</td>\n",
+       "      <th>2012-10-05</th>\n",
+       "      <td>-0.000322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1644</th>\n",
-       "      <td>2012-10-05</td>\n",
-       "      <td>0.003469</td>\n",
+       "      <th>2019-04-16</th>\n",
+       "      <td>0.000509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1645</th>\n",
-       "      <td>2012-10-04</td>\n",
-       "      <td>0.000322</td>\n",
+       "      <th>2019-04-17</th>\n",
+       "      <td>-0.002274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1646</th>\n",
-       "      <td>2012-10-03</td>\n",
-       "      <td>-0.007123</td>\n",
+       "      <th>2019-04-18</th>\n",
+       "      <td>0.001579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1647</th>\n",
-       "      <td>2012-10-02</td>\n",
-       "      <td>-0.003611</td>\n",
+       "      <th>2019-04-22</th>\n",
+       "      <td>0.001012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1648</th>\n",
-       "      <td>2012-10-01</td>\n",
-       "      <td>-0.000872</td>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>0.008841</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1649 rows × 2 columns</p>\n",
+       "<p>1649 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date   S&P 500\n",
-       "0    2019-04-23       NaN\n",
-       "1    2019-04-22 -0.008764\n",
-       "2    2019-04-18 -0.001011\n",
-       "3    2019-04-17 -0.001577\n",
-       "4    2019-04-16  0.002279\n",
-       "...         ...       ...\n",
-       "1644 2012-10-05  0.003469\n",
-       "1645 2012-10-04  0.000322\n",
-       "1646 2012-10-03 -0.007123\n",
-       "1647 2012-10-02 -0.003611\n",
-       "1648 2012-10-01 -0.000872\n",
+       "             S&P 500\n",
+       "Date                \n",
+       "2012-10-01       NaN\n",
+       "2012-10-02  0.000872\n",
+       "2012-10-03  0.003624\n",
+       "2012-10-04  0.007174\n",
+       "2012-10-05 -0.000322\n",
+       "...              ...\n",
+       "2019-04-16  0.000509\n",
+       "2019-04-17 -0.002274\n",
+       "2019-04-18  0.001579\n",
+       "2019-04-22  0.001012\n",
+       "2019-04-23  0.008841\n",
        "\n",
-       "[1649 rows x 2 columns]"
+       "[1649 rows x 1 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,10 +541,27 @@
     "# Append Daily Returns sp_dly_ret to new column in sp_df named 'S&P 500'\n",
     "sp_df['S&P 500'] = sp_dly_ret\n",
     "\n",
+    "# Drop nulls from sp_df\n",
+    "sp_df.dropna()\n",
+    "\n",
     "# Drop Column 'Close' from sp_df\n",
     "sp_df.drop(columns=['Close'], inplace=True)\n",
     "sp_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
